# SCCaptcha

./: .gitignore  README.md  captcha.html  demo.html  index.html  nojs.html  run.sh  ssl.py  style.css  verbose.html
backend/: Cargo.toml
backend-py/: .gitignore  README.md  bruh.py  main.py  test.py
envsensors/: ambientlight.html
js/: index.js
main/: image_handler.py  main.py
recaptcha/: pyproject.toml  test.sh
recaptcha/ReCaptcha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
recaptcha/flaskr/: README.md  analysis.py  coordinate_handler.py  helper.py  image_handler.py  main.py  path_behaviour.py  path_dump.json  requirements.txt  results.txt
recaptcha/flaskr/static/css/: indexstyle.css  styles.css
recaptcha/flaskr/static/js/: index.js
recaptcha/flaskr/templates/: index.html  puzzle.html
recaptcha/recaptcha_main/: .gitignore  README.md  analysis.py  helper.py  image_handler.py  main.py  path_behaviour.py  results.txt
recaptcha/recaptcha_main.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
recaptcha/recaptcha_main/analysis/: learnability.py  param_tune.py  parameter.txt  results.txt  user_patterns.py
recaptcha/recaptcha_main/analysis/plots/: browser_usage.py  other_captchas.py  ratings.py  user_demographics.py
recaptcha/recaptcha_main/static/css/: audiostyle.css  indexstyle.css
recaptcha/recaptcha_main/static/pics/: get_from_server.sh
recaptcha/recaptcha_main/templates/: custom_captcha.html  index.html  puzzle.html  recaptcha.html
recaptcha_main/: .gitignore  image_handler.py  main.py
task/: acc-task1.html  acc-task2.html  fallback.html  (+6 more)
(+46 files in other folders)
