[project]
name = "recaptcha_main"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "New Captcha Mechanism"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flask",
  "Pillow>=8.3.1",
  "colorama>=0.4.4",
  "more-itertools>=8.8.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"